--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
   # AWS deploy
   deploy:
     runs-on: ubuntu-latest
-      needs: [build]
+      needs: build
       if: github.ref == 'refs/heads/main'
       steps:
       # Step 1
